# catkin_ws

./: .ICEauthority  .bash_history
.cache/: event-sound-cache.tdb.e8ac4a51fdca44d8800fdc7323328274.x86_64-pc-linux-gnu
.cache/fontconfig/: 6d41288fd70b0be22e8c3a91e032eec0-le64.cache-7  7ef2298fde41cc6eeb7af42e48b7d293-le64.cache-7  bf3b770c553c462765856025a94f1ce6-le64.cache-7  c57959a16110560c8d0fcea73374aeeb-le64.cache-7  de156ccd2eddbdc19d37a45b8b2aac9c-le64.cache-7
.cache/ibus/bus/: registry
.cache/ubuntu-report/: pending
.cache/wallpaper/: 0_5_956_919_792beab7550410d531e55f95b449f135
.catkin_tools/profiles/default/: devel_collisions.txt
.config/dconf/: user
.config/gtk-3.0/: bookmarks
.config/ibus/bus/: e8ac4a51fdca44d8800fdc7323328274-unix-0
.config/nautilus/: desktop-metadata
.config/pulse/: cookie
.gnupg/: pubring.kbx  trustdb.gpg
.local/share/: session_migration-ubuntu
.local/share/gnome-shell/: application_state
.local/share/gvfs-metadata/: home
.local/share/keyrings/: login.keyring  user.keystore
.mozilla/firefox/: installs.ini  profiles.ini
.mozilla/firefox/6gt5xljp.default/: times.json
.mozilla/firefox/Crash Reports/: InstallTime20210903235534
.mozilla/firefox/bw5lkvas.default-release/: cert9.db  (+12 more)
.ros/: rospack_cache_02946445166995464026
devel/: .catkin  setup.sh
src/abb4600/abb_description/: CMakeLists.txt  package.xml
src/abb4600/abb_description/launch/: abb_rviz.launch  load_irb4600_40_255.launch  test_irb4600_40_255.launch
src/abb4600/abb_description/urdf/: irb4600_40_255.xacro  irb4600_40_255_macro.xacro
(+270 files in other folders)
